@@ -1,14 +1,9 @@
 package com.atzuche.order.coreapi.utils;
 
 import com.autoyol.commons.web.ErrorCode;
-import com.google.common.collect.Maps;
 import net.sf.json.JSONObject;
-import org.apache.commons.collections.CollectionUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.stereotype.Component;
-import sun.misc.BASE64Encoder;
-
 import java.io.*;
 import java.net.HttpURLConnection;
 import java.net.URL;
@@ -142,7 +137,7 @@ public class SMSIcsocVoiceUtils {
     private static int getIcsocLines(){
         Map<String,Object> map = new HashMap<String,Object>();
         String account=ICSOC_ACCOUNT;
-        String password=SHA1("icsoc"+new BASE64Encoder().encode(ICSOC_PASSWORD.getBytes()));
+        String password=SHA1("icsoc"+Base64.getEncoder().encode(ICSOC_PASSWORD.getBytes()));
         String url=ICSOC_URL+ "/voiceserver.php";
         map.put("Account", account);
         map.put("password", password);
